:beers: install dependencies

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "test": "node tests/filebit-download-tests.js",
     "lint": "node node_modules/jshint/bin/jshint .",
     "go": "node index.js"
+  },
+  "dependencies": {
+    "request": "^2.49.0"
   }
 }
